Fixed image way too big problem

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-dd {
+dd img{
     width: 1px;
     height: 1px;
     padding: 2px;
